Fix errors and add override annotation visitor